--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/fav-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <meta name="description"
     content="OneDrop is a modern blood donation platform that facilitates blood donation activities. This website will connect donors with those in need of blood, promoting a seamless and efficient donation process. It enables easy donor registration, blood requests, and real-time donor management to help save lives efficiently" />
   <meta name="keywords"
